snapshots/care/data4life/hc-util-sdk-kmp/error/1.12.0-SNAPSHOT/maven-metadata.xml.md5
88bfb507313fd1f6ffbeef3f139be518